Migrate to Java 21 & cleanup scraper schedule - Linted imports as well