@@ -1,16 +1,15 @@
 plugins {
 	java
-	id("org.springframework.boot") version "3.1.2"
-	id("io.spring.dependency-management") version "1.1.2"
-	id("io.freefair.lombok") version "8.2.2"
+	id("org.springframework.boot") version "3.1.4"
+	id("io.spring.dependency-management") version "1.1.3"
 }
 
 group = "io.arsha"
 version = "0.0.1-SNAPSHOT"
 
 java {
-	sourceCompatibility = JavaVersion.VERSION_20
-	targetCompatibility = JavaVersion.VERSION_20
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 configurations {
@@ -32,16 +31,16 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-webflux")
 	implementation("org.springframework.boot:spring-boot-starter-websocket")
 	implementation("org.springframework.boot:spring-boot-starter-validation")
-	implementation("org.apache.commons:commons-lang3:3.0")
-	implementation("jakarta.inject:jakarta.inject-api:2.0.1")
+	implementation("org.apache.commons:commons-lang3:3.12.0")
+	implementation("jakarta.inject:jakarta.inject-api:2.0.1.MR")
 	implementation("org.apache.httpcomponents.client5:httpclient5:5.3-alpha1")
 	implementation("org.jsoup:jsoup:1.16.1")
 	implementation("org.thshsh:struct:2.2.0")
-	compileOnly("org.projectlombok:lombok")
+	compileOnly("org.projectlombok:lombok:1.18.30")
 	developmentOnly("org.springframework.boot:spring-boot-devtools")
 	// developmentOnly("org.springframework.boot:spring-boot-docker-compose")
 	annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
-	annotationProcessor("org.projectlombok:lombok")
+	annotationProcessor("org.projectlombok:lombok:1.18.30")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
 	testImplementation("io.projectreactor:reactor-test")
 	testImplementation("org.springframework.security:spring-security-test")
@@ -53,14 +52,4 @@ tasks.getByName<Jar>("jar") {
 
 tasks.withType<Test> {
 	useJUnitPlatform()
-}
-
-tasks.withType<JavaCompile> {
-	options.compilerArgs.add("--enable-preview")
-}
-tasks.withType<Test> {
-	jvmArgs = listOf("--enable-preview")
-}
-tasks.withType<JavaExec> {
-	jvmArgs = listOf("--enable-preview")
 }
